CodeFirstDeploymet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientcodefirst-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientcodefirst
  template:
    metadata:
      labels:
        app: clientcodefirst
    spec:
      containers:
      - name: clientcodefirst-container
        image: clientcodefirst
        imagePullPolicy: Never
        ports:
        - containerPort: 5091
