codefirst-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientcodefirst-service
  labels:
    app: clientcodefirst
spec:
  type: LoadBalancer  # Cambiado a NodePort o LoadBalancer para exponer la API
  ports:
    - port: 5091
      targetPort: 5091
  selector:
    app: clientcodefirst
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientcodefirst-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clientcodefirst
  template:
    metadata:
      labels:
        app: clientcodefirst
      annotations:
        # Cambia este valor en cada despliegue para forzar la actualización
        deployment.kubernetes.io/revision: "3"  # Modifica este valor para cada despliegue
    spec:
      containers:
        - name: clientcodefirst
          image: h2k2/clientcodefirst:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5091
