codefirst-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: clientcode.cluster.local
    http:
      paths:
      - path: /api/ 
        pathType: Prefix
        backend:
          service: 
            name: clientcodefirst-service
            port: 
              number: 5091
  - host: mysql.cluster.local
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port: 
              number: 3311
